--- a/profiles/soar/themes/custom/soar_admin/sass/custom.scss
+++ b/profiles/soar/themes/custom/soar_admin/sass/custom.scss
@@ -8,6 +8,9 @@
 @import "modules/workbench";
 @import "modules/wysiwyg";
 @import "modules/views";
+@import "modules/button";
+@import "modules/media";
+
 
 @import "theme/admin";
 @import "theme/forms";
