--- a/profiles/soar/themes/custom/soar_admin/sass/modules/_wysiwyg.scss
+++ b/profiles/soar/themes/custom/soar_admin/sass/modules/_wysiwyg.scss
@@ -5,6 +5,68 @@
   display: none;
 }
 
+.text-format-wrapper {
+  
+  .form-type-textarea {
+    margin-bottom: 0;
+  }
+
+  .ckeditor_links {
+    display: none !important;
+  }
+
+
+  fieldset.filter-wrapper {
+    $filter-height: 28px;
+    border: none;
+    background: $gray-lighter;
+    padding: $padding-base-vertical $padding-base-horizontal;
+    border-radius: 0;
+    font-size: $font-size-h6;
+
+    .form-group {
+      margin-bottom: 0;
+    }
+
+    select {
+      font-size: $font-size-h6;
+      height: $filter-height;
+    }
+
+    .panel-body {
+      border: none;
+      padding: 0;
+
+      label {
+        float: left;
+        padding-right: $padding-base-horizontal;
+        line-height: $filter-height;
+        margin-bottom: 0;
+      }
+      
+      .filter-help {
+        padding-top: 0;
+        line-height: $filter-height;
+      }
+    }
+  }
+  
+}
+
+
+#ckeditor-admin-profile-form {
+  div.sortableList div.sortableListDiv span.sortableListSpan {
+    &,
+    ul {
+      height: 38px;
+    }
+
+    li {
+      height: 30px;
+    }
+  }
+}
+
 
 //*
 //* Responsive
