--- a/profiles/soar/themes/custom/soar_admin/sass/custom.scss
+++ b/profiles/soar/themes/custom/soar_admin/sass/custom.scss
@@ -3,13 +3,14 @@
 
 @import "regions/header";
 
+@import "modules/button";
 @import "modules/field-group";
+@import "modules/media";
 @import "modules/panels";
+@import "modules/permissions";
+@import "modules/views";
 @import "modules/workbench";
 @import "modules/wysiwyg";
-@import "modules/views";
-@import "modules/button";
-@import "modules/media";
 
 
 @import "theme/admin";
