--- a/profiles/soar/themes/custom/soar_admin/sass/custom.scss
+++ b/profiles/soar/themes/custom/soar_admin/sass/custom.scss
@@ -4,6 +4,7 @@
 @import "regions/header";
 
 @import "modules/button";
+@import "modules/features";
 @import "modules/field-group";
 @import "modules/media";
 @import "modules/panels";
