--- a/profiles/soar/themes/custom/soar_admin/sass/theme/_admin.scss
+++ b/profiles/soar/themes/custom/soar_admin/sass/theme/_admin.scss
@@ -1,7 +1,7 @@
 
 // reduce top padding, may need to be adjusted
 
-html body.toolbar-drawer {
+html body.admin-menu {
   padding-top: 15px!important;
 }
 
