--- a/profiles/soar/themes/custom/soar_base/sass/layout/_header.scss
+++ b/profiles/soar/themes/custom/soar_base/sass/layout/_header.scss
@@ -11,7 +11,12 @@
 // *
 // ******************************************************
 
-@include respond($small-only) {
+
+
+// Mobile only
+// --------------------------------------------------
+
+@media screen and (max-width: $screen-xs-max) {
   .l-logo {
     text-align: center;
   }
