--- a/profiles/soar/themes/custom/soar_base/sass/custom.scss
+++ b/profiles/soar/themes/custom/soar_base/sass/custom.scss
@@ -1,5 +1,29 @@
 
+
+// Init
+// -----------------------------------------
+
 @import "base/init";
 
 
+// Layout
+// -----------------------------------------
+
+@import "layout/header";
+@import "layout/main";
+@import "layout/aside";
+@import "layout/footer";
+
+
+// Components
+// -----------------------------------------
+
+@import "components/media";
+@import "components/type";
+
+
+// Modules (additional functionality)
+// -----------------------------------------
+
 @import "modules/off-canvas";
+@import "modules/drupal-panels";
