--- a/profiles/soar/themes/custom/soar_admin/sass/custom.scss
+++ b/profiles/soar/themes/custom/soar_admin/sass/custom.scss
@@ -7,6 +7,7 @@
 @import "modules/features";
 @import "modules/field-group";
 @import "modules/media";
+@import "modules/media-module";
 @import "modules/panels";
 @import "modules/permissions";
 @import "modules/views";
