--- a/profiles/soar/themes/custom/soar_base/sass/custom.scss
+++ b/profiles/soar/themes/custom/soar_base/sass/custom.scss
@@ -18,6 +18,7 @@
 // Components
 // -----------------------------------------
 
+@import "components/fontawesome/fontawesome";
 @import "components/media";
 @import "components/type";
 
